--- a/master1.yaml
+++ b/master1.yaml
@@ -1,6 +1,6 @@
 proxies:
 - name: master1
-  server: bugmu.com
+  server: blog.midtrans.com
   type: trojan
   port: 443
   password: 3680f4f0-2f82-11ed-be4e-1239d0255272
@@ -13,7 +13,7 @@ proxies:
     headers:
       Host: sg3-trojan.bonds.id
 - name: master2
-  server: bugmu.com
+  server: blog.midtrans.com
   type: trojan
   port: 443
   password: 3680f4f0-2f82-11ed-be4e-1239d0255272
